Detects if the time selected is during opening hour #5

--- a/Donut-on-Demand/src/main/resources/messages.properties
+++ b/Donut-on-Demand/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ duplicate.user.username=Someone already has that username.
 size.user.password=Try one with at least 8 characters.
 diff.user.passwordConfirm=These passwords don't match.
 size.customer.name=Please use between 2 and 32 characters.
+shop.schedule=Please choose an opening hour.
